# isro_project

./: .gitattributes  .gitignore  01Apr2016_S4.xlsx  README.md  explore.py  lstm.ipynb  lstm.py  prophet.py  prophet_model.py  pyproject.toml  run_graphcast.py  todo.md
app/: custom_css.py  data_loader.py  logging.conf  main.py  map_creator.py  utils.py  visualizations.py
backend/: api_spec.yaml  logging_conf.py  main.py  utils.py
model/: combine_data.py  components.py  data_loader.py  data_timeseries.py  generate.py  graphcast_dataloader.py  graphcast_model.py  grid_utils.py  logging_conf.py  lstm_model.py  metrics.py  mlstm_utils.py  peephole_lstm.py  utils.py  validation_functions.py
reference_material/: slant_to_vertical.md
