[tool.poetry]
name = "isro-project"
version = "0.1.0"
description = ""
authors = ["pupperemeritus <5bdiposan@relay.firefox.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
plotly = "^5.22.0"
geopandas = "^1.0.0"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
pyarrow = "^16.1.0"
scipy = "^1.14.0"
polars = "^1.2.1"
torch = "^2.3.1"
lightning = "^2.4.0"
tensorrt = "^10.2.0.post1"
torchvision = "^0.18.1"
ipykernel = "^6.29.5"
scikit-learn = "^1.5.1"
nbdime = "^4.0.1"
cartopy = "^0.23.0"
matplotlib = "^3.9.1"
kaleido = "0.2.1"
streamlit = "^1.37.0"
mlflow = "^2.16.2"
darts = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
