[tool.poetry]
name = "isro-project"
version = "0.1.0"
description = ""
authors = ["pupperemeritus <5bdiposan@relay.firefox.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
plotly = "^5.22.0"
geopandas = "^1.0.0"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
pyarrow = "^16.1.0"
scipy = "^1.14.0"
polars = "^1.2.1"
torch = "^2.6.0"
lightning = "^2.5.0.post0"
tensorrt = "^10.2.0.post1"
torchvision = "^0.21.0"
ipykernel = "^6.29.5"
scikit-learn = "^1.5.1"
nbdime = "^4.0.1"
cartopy = "^0.23.0"
matplotlib = "^3.9.1"
kaleido = "0.2.1"
streamlit = "^1.37.0"
mlflow = "^2.16.2"
darts = {extras = ["all"], version = "^0.30.0"}
u8darts = {extras = ["all"], version = "^0.30.0"}
prophet = "^1.1.6"
rich = "^13.9.4"
zarr = "^3.0.5"
graphcast = {url = "https://github.com/deepmind/graphcast/archive/master.zip"}
jax = {version = "0.5.0", extras = ["cuda"]}
jaxlib = "0.5.0"
optax = "^0.2.4"
mlstm-kernels = "^1.0.3"
xlstm = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
